argocd-contour/test/weight/00-generate-certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: test-self
  namespace: test
spec:
  secretName: test-tls
  issuerRef:
    kind: ClusterIssuer
    name: selfsigned-issuer
  dnsNames:
  - '*.sanniolo.myinstance.com'
  - sanniolo.myinstance.com
  #- httpbin.sanniolo.myinstance.com
