argocd-contour/test/weight/03-weight.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: weight
  namespace: test
spec:
  virtualhost:
    fqdn: test.sanniolo.myinstance.com
    tls:
      secretName: test-tls
  routes:
    - conditions:
      - prefix: /
      services:
        - name: httpd
          port: 80
          weight: 50
        - name: nginx
          port: 80
          weight: 50
